# network-monitoring

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.phase2.yml  docker-compose.phase3.yml  docker-compose.yml
analyzer/: Dockerfile  pyproject.toml
analyzer/analyzer/: config.py  main.py  models.py
analyzer/analyzer/alerts/: detector.py  notifier.py
analyzer/analyzer/api/: routes.py
analyzer/analyzer/correlator/: engine.py  rules.py
analyzer/analyzer/enrichment/: device.py  dns.py  geoip.py
analyzer/analyzer/unifi/: client.py  poller.py
analyzer/tests/: test_correlator.py  test_enrichment.py  test_probe_results.py
config/alertmanager/: alertmanager.yml
config/clickhouse/: init-db.sql  users.xml
config/grafana/dashboards/: client-health.json  correlated-events.json  dns-analysis.json  network-overview.json  probe-results.json  syslog-explorer.json
config/grafana/provisioning/dashboards/: dashboards.yaml
config/grafana/provisioning/datasources/: datasources.yaml
config/loki/: loki-config.yaml
config/vector/: vector-phase2.yaml  vector-phase3.yaml  vector.yaml
docs/: api-reference.md  architecture.md  configuration.md  dashboards.md  development.md  installation.md  troubleshooting.md  unifi-setup.md
scripts/: setup.sh  test-netflow.sh  test-syslog.sh  verify.sh
