[project]
name = "netmon-analyzer"
version = "0.1.0"
description = "Network monitoring analyzer - UniFi API integration, enrichment, and correlation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "clickhouse-connect>=0.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "geoip2>=4.8.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
